[project]
name = "webdriver-factory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length=120
